--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,8 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Free movie catalogue for you">
           <link rel="icon" href="favicon.png">
+          <link rel="manifest" href="manifest.json">
+          <meta name="theme-color" content="#db0000" />
           <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
           <title>Movie Catalogue</title>
      </head>
