--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
           <link rel="icon" href="favicon.png">
           <link rel="manifest" href="manifest.json">
           <meta name="theme-color" content="#db0000" />
+          <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
           <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
           <title>Movie Catalogue</title>
      </head>
