--- a/src/style/style.css
+++ b/src/style/style.css
@@ -182,6 +182,28 @@ main {
 }
 
 /*
+
+   TOMBOL LIKE
+
+*/
+.like {
+    font-size: 18px;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    background-color: #db0000;
+    color: white;
+    border: 0;
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*
   Footer
 */
 
@@ -198,3 +220,4 @@ footer p a {
   color: #db0000;
   text-decoration: none;
 }
+
